--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,27 @@
-<h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
-<p>Address:</p>
-<p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Me</title>
+</head>
+<body>
+    <h1>My Contact details:</h1>
+    <ol>
+        <li><a href="tel:7894750909">Phone Number</a></li>
+        <li>Email:milankumarnayak113@gmail.com</li>
+        <li>Address:
+            <ul>
+                <li>At-Ramdas colony</li>
+                <li>Pos-Dhabalagiri</li>
+                <li>city-Jajpur road</li>
+                <li>Dis-Jajpur</li>
+                <li>State-Odisha</li>
+                <li>Pin-755019</li>
+            </ul>
+        </li>
+        <li><a href="https://www.google.com/maps/place/Byasanagar,+Odisha/@20.9476116,86.102247,14z/data=!3m1!4b1!4m6!3m5!1s0x3a19518f39d6ac5d:0xf14bc4140cb31b7c!8m2!3d20.9550552!4d86.1271048!16zL20vMGYwbG10?entry=ttu">Map</a></li>
+    </ol>
+    
+</body>
+</html>
